[gd_scene load_steps=10 format=3 uid="uid://cjw2m2scfdru"]

[ext_resource type="Script" uid="uid://d1psplgys5f77" path="res://lock.gd" id="1_6aaqj"]
[ext_resource type="Texture2D" uid="uid://dm7wt7nwh14qt" path="res://sprites/Lock.png" id="1_uvtj7"]
[ext_resource type="Texture2D" uid="uid://dap5bi82sqqi2" path="res://sprites/Lock2.png" id="2_rmqde"]
[ext_resource type="Texture2D" uid="uid://c1l64ujw36joy" path="res://sprites/Lock3.png" id="3_6aaqj"]
[ext_resource type="Texture2D" uid="uid://do4l1b0615mn6" path="res://sprites/Lock4.png" id="4_ebkbn"]
[ext_resource type="Texture2D" uid="uid://dkh6m887ya5e0" path="res://sprites/Gem.png" id="6_ebkbn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_d4h6p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_uvtj7")
}, {
"duration": 1.0,
"texture": ExtResource("2_rmqde")
}, {
"duration": 1.0,
"texture": ExtResource("3_6aaqj")
}, {
"duration": 1.0,
"texture": ExtResource("4_ebkbn")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p554e"]
size = Vector2(142, 102)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o2523"]
size = Vector2(142, 84)

[node name="Lock" type="Node2D"]
script = ExtResource("1_6aaqj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_d4h6p")
speed_scale = 2.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 9

[node name="AreaCollisionShape2D" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
position = Vector2(0, 22)
shape = SubResource("RectangleShape2D_p554e")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="StaticCollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_o2523")

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
modulate = Color(0.720419, 0.544964, 0.965049, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -165.0
offset_right = -9.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_ebkbn")

[node name="GemsReqLabel" type="Label" parent="TextureRect"]
clip_contents = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -52.0
offset_right = 457.0
offset_bottom = 53.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 76
text = "x10"
vertical_alignment = 1

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
